--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,7 @@ jobs:
               cd domains/sltm.selopia.com/public_html/
               composer2 update
               php artisan migrate
+              php artisan db:seed
               php artisan optimize
               php artisan cache:clear
   
