--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "3.1.48",
+        "spatie/laravel-permission": "^5.10",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
