--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,7 @@ jobs:
               composer2 update
               php artisan migrate
               php artisan optimize
+              php artisan db:seed --class=RolePermissionSeeder
               php artisan cache:clear
   
         
