--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
             port: 65002
             script: |
               cd domains/sltm.selopia.com/public_html/
-              composer2 update
+              # composer2 update
               php artisan migrate
               php artisan optimize
               php artisan cache:clear
